testdata/golden/sema/invalid/struct_literal_return_empty_for_nonempty.fmt
// scenario: empty struct literal in return for struct with fields
type Foo = {
    value: int,
    name: string
}

fn test_empty_for_nonempty() -> Foo {
    return {};  // ERROR: Foo is missing required field value and name
}
